--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -13,6 +13,7 @@
       <td><%= link_to item.name, item_path(item) %></td>
       <td><%= item.description %></td>
       <td><%= item.url %></td>
+      <td><%= link_to 'Edit', edit_item_path(item) %></td>
     </tr>
   <% end %>
 </table>
