--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -12,3 +12,15 @@
     </tr>
   <% end %>
 </table>
+
+<div class="row">
+  <div class="col-sm">
+    One of three columns
+  </div>
+  <div class="col-sm">
+    One of three columns
+  </div>
+  <div class="col-sm">
+    One of three columns
+  </div>
+</div>
