Create personal and public list show pages

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,7 @@
   <% @user.lists.each do |list| %>
     <tr>
       <td>
-        <%= link_to(list.group.name, edit_list_path(list)) %>
+        <%= link_to(list.group.name, list_path(list)) %>
       </td>
     </tr>
   <% end %>
