--- a/app/views/lists/personal_show.html.erb
+++ b/app/views/lists/personal_show.html.erb
@@ -1,11 +1,13 @@
-<h1> <%= @list.user.name %>'s List </h1>
+<h1> <%= @list.user.name %>'s List (for <%= @list.group.name %>)</h1>
+
+<%= link_to 'Add Item', new_item_path %>
 
 <table>
   <tr>
     <th>Name</th>
     <th>Description</th>
     <th>URL</th>
-    <th>available?</th>
+    <th>edit</th>
     <th></th>
   </tr>
 
@@ -14,7 +16,7 @@
       <td><%= link_to item.name, item_path(item) %></td>
       <td><%= item.description %></td>
       <td><%= item.url %></td>
-      <td><%= item.available? %></td>
+      <td><%= link_to "Edit", edit_item_path(item)  %></td>
       <%# <td><%= link_to 'gotten', edit_item_path(item) %1></td> %>
     </tr>
   <% end %>
