--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,6 +1,6 @@
 <h1> New Item </h1>
 
-<% if @item.errors.any? %>
+<% if @item && @item.errors.any? %>
   <div id="error_explanation">
     <h2>
       <%= pluralize(@item.errors.count, "error") %> prohibited
