Start using some Bootstrap on tables
Like there's a grownup in the room.

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>This is a list of people in your group. Click on a person&#39;s name to see their list.</p>
 
-<table>
+<table class="table">
   <tr>
     <th>Name</th>
     <th></th>
