--- a/app/views/lists/public_show.html.erb
+++ b/app/views/lists/public_show.html.erb
@@ -1,6 +1,6 @@
 <h1> <%= @list.user.name %>'s List (for <%= @list.group.name %>)</h1>
 
-<table>
+<table class="table">
   <tr>
     <th>Name</th>
     <th>Description</th>
