--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,22 @@
 <h1><%= @user.name %>'s Profile</h1>
 
-<h3>My Groups:</h3>
-<table>
+<table class="table">
+  <tr>
+    <th>Group</th>
+    <th>Name</th>
+  </tr>
   <% @user.groups.each do |group| %>
-    <tr>
-      <td> <%= link_to(group.name, group_path(group)) %></td>
-    </tr>
+    <% group.lists.each do |list| %>
+      <tr>
+        <td> <%= link_to(group.name, group_path(group)) %></td>
+        <td> <%= link_to(list.user.name, list_path(list)) %></td>
+      </tr>
+    <% end %>
   <% end %>
 </table>
 
 <h3>My Lists</h3>
-<table>
-  <tr>
-    <th>
-    Group Name
-    </th>
-  </tr>
-
+<table class="table">
   <% @user.lists.each do |list| %>
     <tr>
       <td>
