rename the navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,16 +13,7 @@
 
   <body>
     <div class "container">
-      <%= render "layouts/navbar" %>
-      <% unless flash.empty? %>
-	<script type="text/javascript">
-	  <% flash.each do |f| %>
-	      <% type = f[0].to_s.gsub('alert', 'error').gsub('notice', 'info') %>
-	    toastr['<%= type %>']('<%= f[1] %>');
-	<% end %>
-	</script>
-      <% end %>
-
+      <%= render "layouts/navigation/navbar" %>
       <%= yield %>
     </div>
   </body>
