--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div class "container">
+    <div class="container">
       <%= render "layouts/navigation/navbar" %>
       <%= yield %>
     </div>
