--- a/app/views/layouts/navigation/_navbar.html.erb
+++ b/app/views/layouts/navigation/_navbar.html.erb
@@ -23,9 +23,24 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
+      <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to('Change Password', edit_user_registration_path, class: 'nav-link') %>
+        </li>
+        <li class="nav-item">
+          <%= link_to('Logout', destroy_user_session_path, :method => :delete, class: 'nav-link') %>
+        </li>
+
+      <% else %>
+
+        <li class="nav-item">
+          <%= link_to('Register', new_user_registration_path, class: 'nav-link')  %>
+        </li>
+        <li class="nav-item">
+          <%= link_to('Login', new_user_session_path, class: 'nav-link')  %>
+        </li>
+
+      <% end %>
     </ul>
   </div>
 </nav>
