--- a/app/views/layouts/navigation/_navbar.html.erb
+++ b/app/views/layouts/navigation/_navbar.html.erb
@@ -5,42 +5,10 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="My List">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Lists
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <% if user_signed_in? %>
-        <li class="nav-item">
-          <%= link_to('Change Password', edit_user_registration_path, class: 'nav-link') %>
-        </li>
-        <li class="nav-item">
-          <%= link_to('Logout', destroy_user_session_path, :method => :delete, class: 'nav-link') %>
-        </li>
-
-      <% else %>
-
-        <li class="nav-item">
-          <%= link_to('Register', new_user_registration_path, class: 'nav-link')  %>
-        </li>
-        <li class="nav-item">
-          <%= link_to('Login', new_user_session_path, class: 'nav-link')  %>
-        </li>
-
-      <% end %>
-    </ul>
+    <% if current_user %>
+      <%= render "layouts/navigation/logged_in_navbar" %>
+    <% else%>
+      <%= render "layouts/navigation/logged_out_navbar" %>
+    <% end %>
   </div>
 </nav>
