Users can add items from a list page
This is pretty hacky, but I'll let it fly for now (because that's how
we're rolling on this app.

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -30,6 +30,7 @@
     <%= form.text_field :url %>
   </p>
 
+  <input type="hidden" id="list_id" name="item[list_id]" value=<%= @list_id %> />
   <p>
     <%= form.submit %>
   </p>
