--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,4 +1,4 @@
-<h1> New Item </h1>
+<h1> New Item for <%= @group_name %></h1>
 
 <% if @item && @item.errors.any? %>
   <div id="error_explanation">
